1-Week Plan Bug Fix

--- a/client/pages/dashboard-danny.html
+++ b/client/pages/dashboard-danny.html
@@ -231,6 +231,15 @@
         <a href="nutrition-tracker-danny.html" class="cta">Go to Nutrition</a>
     </article>
 
+    <!-- My Mind -->
+    <article class="tracker-card" id="mmCard">
+      <span class="emoji">🧠</span>
+      <h2>My Mind</h2>
+      <p class="status">Check in, reset, and keep your mindset strong.</p>
+      <p class="streak">Small steps for big mental wins.</p>
+      <a href="my-mind-danny.html" class="cta">Go to My Mind</a>
+    </article>
+
     <article class="tracker-card" id="mpCard" style="display:none;">
       <span class="emoji">🚀</span>
       <h2>My Progress</h2>
