1-Week Payment Bug Fix

--- a/client/pages/nutrition-tracker-ty.html
+++ b/client/pages/nutrition-tracker-ty.html
@@ -231,7 +231,7 @@ src="https://www.facebook.com/tr?id=2589073464764526&ev=PageView&noscript=1"
             Today’s Tip
           </h3>
           <div id="todaysTipCard" class="coach-insights-note"
-            style="background-color: #cce5ff; display:none; max-width: 500px; margin: 0 auto;">
+            style="background-color: #151515; display:none; max-width: 500px; margin: 0 auto;">
             <!-- Populated by JS -->
           </div>
 
@@ -291,7 +291,7 @@ src="https://www.facebook.com/tr?id=2589073464764526&ev=PageView&noscript=1"
             </div>
 
             <!-- Macro Match Score -->
-            <h4 style="color: #333; margin-top: 25px;">Macro Match Score</h4>
+            <h4 style="color: #d2d2d2; margin-top: 25px;">Macro Match Score</h4>
             <div id="macroMatchScoreDisplay" style="font-size: 1.1rem; font-weight: bold; margin-bottom: 30px;">
               <!-- e.g. "82% Accuracy" -->
             </div>
