--- a/client/pages/offer-ty.html
+++ b/client/pages/offer-ty.html
@@ -321,7 +321,7 @@ center center / cover no-repeat;
 position: absolute;
 top: 50%; left: 50%;
 transform: translate(-50%, -50%);
-background-color: rgba(0,0,0,0.6);
+      background-color: rgba(0, 0, 0, 0.6);
 border-radius: 50%; padding: 12px;
 ">
 <svg width="40" height="40" viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg">
@@ -841,7 +841,7 @@ alert('Could not initialise PayPal. Please refresh and try again.');
       </form>
 
       <!-- loaders / messages -->
-      <p id="loadingIndicator" style="display:none;text-align:center;margin-top:12px;font-weight:500;color:#333;">
+      <p id="loadingIndicator" style="display:none;text-align:center;margin-top:12px;font-weight:500;color:#d2d2d2;">
         Loading
       </p>
       <p id="cardError" class="error"></p>
