--- a/client/pages/workout-tracker-ty.html
+++ b/client/pages/workout-tracker-ty.html
@@ -262,7 +262,7 @@ src="https://www.facebook.com/tr?id=2589073464764526&ev=PageView&noscript=1"
             Today’s Tip
           </h3>
           <div id="todaysTipCard" class="coach-insights-note"
-            style="background-color: #cce5ff; display:none; max-width: 500px; margin: 0 auto;">
+            style="background-color: #151515; display:none; max-width: 500px; margin: 0 auto;">
             <!-- JS will place the tip text here -->
           </div>
           <!-- 
