--- a/client/pages/dashboard-kayp.html
+++ b/client/pages/dashboard-kayp.html
@@ -32,6 +32,7 @@
         <!-- <li><a href="dashboard.html">My Dashboard</a></li> -->
         <li><a href="workout-tracker-kayp.html" id="nav-workouts">My Workouts</a></li>
         <li><a href="nutrition-tracker-kayp.html" id="nav-nutrition">My Nutrition</a></li>
+        <li><a href="my-mind-kayp.html" id="nav-mind">My Mind</a></li>
         <li><a href="#" id="nav-help">Help</a></li>
       </ul>
     </nav>
