--- a/client/pages/nutrition-tracker-kayp.html
+++ b/client/pages/nutrition-tracker-kayp.html
@@ -100,6 +100,7 @@ src="https://www.facebook.com/tr?id=2589073464764526&ev=PageView&noscript=1"
           <li><a href="dashboard-kayp.html">My Dashboard</a></li>
           <li><a href="workout-tracker-kayp.html" id="nav-workouts">My Workouts</a></li>
           <!-- <li><a href="nutrition-tracker-kayp.html" id="nav-nutrition">My Nutrition</a></li> -->
+          <li><a href="my-mind-kayp.html" id="nav-mind">My Mind</a></li>
           <li><a href="#" id="nav-help">Help</a></li>
         </ul>
       </nav>
