--- a/client/pages/nutrition-tracker-ty.html
+++ b/client/pages/nutrition-tracker-ty.html
@@ -100,6 +100,7 @@ src="https://www.facebook.com/tr?id=2589073464764526&ev=PageView&noscript=1"
           <li><a href="dashboard-ty.html">My Dashboard</a></li>
           <li><a href="workout-tracker-ty.html" id="nav-workouts">My Workouts</a></li>
           <!-- <li><a href="nutrition-tracker-ty.html" id="nav-nutrition">My Nutrition</a></li> -->
+          <li><a href="my-mind-ty.html" id="nav-mind">My Mind</a></li>
           <li><a href="#" id="nav-help">Help</a></li>
         </ul>
       </nav>
@@ -499,7 +500,7 @@ src="https://www.facebook.com/tr?id=2589073464764526&ev=PageView&noscript=1"
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <!-- <script type="module" defer src="../scripts/modules/my-progress.js"></script>
   <script defer src="../scripts/workout-tracker.js"></script> -->
-  <script src="../scripts/nutrition-tracker.js"></script>
+  <script src="../scripts/nutrition-tracker-ty.js"></script>
 </body>
 
 </html>
