--- a/client/pages/workout-tracker-nhial.html
+++ b/client/pages/workout-tracker-nhial.html
@@ -104,6 +104,7 @@ src="https://www.facebook.com/tr?id=2589073464764526&ev=PageView&noscript=1"
           <li><a href="dashboard-nhial.html">My Dashboard</a></li>
           <!-- <li><a href="workout-tracker.html" id="nav-workouts">My Workouts</a></li> -->
           <li><a href="nutrition-tracker-nhial.html" id="nav-nutrition">My Nutrition</a></li>
+          <li><a href="my-mind-nhial.html" id="nav-mind">My Mind</a></li>
           <li><a href="#" id="nav-help">Help</a></li>
         </ul>
       </nav>
