Updated Form Hyperlinks + Ty / Carl Polishing

--- a/client/pages/log-in-ty.html
+++ b/client/pages/log-in-ty.html
@@ -88,7 +88,7 @@ src="https://www.facebook.com/tr?id=1217477006533345&ev=PageView&noscript=1"
         <button type="submit" class="login-btn">Continue</button>
 
         <div class="signup-link">
-          <p>Don't have an account? <a href="forms-ty.html">Sign up</a></p>
+          <p>Don't have an account? <a href="../ty.html">Sign up</a></p>
         </div>
     </div>
   </div>
@@ -98,7 +98,7 @@ src="https://www.facebook.com/tr?id=1217477006533345&ev=PageView&noscript=1"
             <p class="powered">POWERED BY</p>
       <p>&copy; 2026 Raising The Bar App Ltd. All rights reserved.</p>
       <div class="footer-links">
-        <a href="forms-ty.html">Start Training</a>
+        <a href="../ty.html">Start Training</a>
         <span class="separator">|</span>
         <a href="legal-overview.html">Our Policies</a>
         <span class="separator">|</span>
