--- a/client/pages/offer-carl.html
+++ b/client/pages/offer-carl.html
@@ -276,7 +276,7 @@ so it doesn't appear above the 1st item or below the last item. -->
         <!-- left leaf -->
 
         <h3 class="asp-headline">
-          <span class="asp-number">10,000+</span>
+          <span class="asp-number">5,000+</span>
           <br>
   kick-started their journey using Carl’s structure
         </h3>
@@ -423,7 +423,7 @@ placeholder.replaceWith(iframe);
         <span class="discount-label">Discount Expires In:</span>
         <span class="time-remaining" id="countdownTimer">10:00</span>
       </div>
-      <p class="first-1000">🔥 271 bought plans today. You're next</p>
+      <p class="first-1000">🔥 136 bought plans today. You're next</p>
     </div>
 
     <!-- Offer Cards -->
@@ -431,7 +431,7 @@ placeholder.replaceWith(iframe);
     <section id="socialProof" class="social-proof">
       <img src="../assets/muscular-silhouette.webp" alt="Coach silhouette" class="social-proof__coach" />
       <p class="social-proof__headline">
-        33 people bought plans in the last hour
+        15 people bought plans in the last hour
       </p>
       <div class="social-proof__recent">
         <span class="social-proof__tag">ava 4-Week Plan</span>
@@ -491,7 +491,7 @@ placeholder.replaceWith(iframe);
           <span class="rating-summary__stars-base" aria-hidden="true">★★★★★</span>
         </div>
         <div class="rating-summary__score">
-          <strong>4.8/5</strong> (2,691 reviews)
+          <strong>4.8/5</strong> (1,346 reviews)
         </div>
       </div>
 
@@ -920,7 +920,7 @@ alert('Could not initialise PayPal. Please refresh and try again.');
         </div>
         <div class="reviews-hero__meta">
           <p class="reviews-hero__headline">4.8 out of 5</p>
-          <p class="reviews-hero__sub">Based on 2,691 reviews verified purchases</p>
+          <p class="reviews-hero__sub">Based on 1,346 reviews verified purchases</p>
         </div>
       </div>
       <ul class="reviews-breakdown" aria-label="Rating distribution">
@@ -1012,7 +1012,7 @@ alert('Could not initialise PayPal. Please refresh and try again.');
       <p class="powered">POWERED BY</p>
       <p>&copy; 2026 Raising The Bar App Ltd. All rights reserved.</p>
       <div class="footer-links">
-        <a href="forms-carl.html">Start Training</a>
+        <a href="../carl.html">Start Training</a>
         <span class="separator">|</span>
         <a href="legal-overview.html">Our Policies</a>
         <span class="separator">|</span>
