--- a/client/pages/offer-danny.html
+++ b/client/pages/offer-danny.html
@@ -1012,7 +1012,7 @@ alert('Could not initialise PayPal. Please refresh and try again.');
       <p class="powered">POWERED BY</p>
       <p>&copy; 2026 Raising The Bar App Ltd. All rights reserved.</p>
       <div class="footer-links">
-        <a href="forms-danny.html">Start Training</a>
+        <a href="../danny.html">Start Training</a>
         <span class="separator">|</span>
         <a href="legal-overview.html">Our Policies</a>
         <span class="separator">|</span>
