--- a/client/pages/sign-up-ty.html
+++ b/client/pages/sign-up-ty.html
@@ -143,7 +143,7 @@ src="https://www.facebook.com/tr?id=1217477006533345&ev=PageView&noscript=1"
             <p class="powered">POWERED BY</p>
       <p>&copy; 2026 Raising The Bar App Ltd. All rights reserved.</p>
       <div class="footer-links">
-        <a href="forms-ty.html">Start Training</a>
+        <a href="../ty.html">Start Training</a>
         <span class="separator">|</span>
         <a href="legal-overview.html">Our Policies</a>
         <span class="separator">|</span>
