--- a/client/pages/log-in-offer-ty.html
+++ b/client/pages/log-in-offer-ty.html
@@ -93,7 +93,7 @@
         <button type="submit" class="login-btn">Continue</button>
 
         <div class="signup-link">
-          <p>Don't have an account? <a href="forms-ty.html">Sign up</a></p>
+          <p>Don't have an account? <a href="../ty.html">Sign up</a></p>
         </div><br><br>
         <!-- <div class="forgot-password-link">
           <a href="forgot-password.html">Forgot your password?</a>
@@ -110,7 +110,7 @@
       <p class="powered">POWERED BY</p>
       <p>&copy; 2026 Raising The Bar App Ltd. All rights reserved.</p>
       <div class="footer-links">
-        <a href="forms-ty.html">Start Training</a>
+        <a href="../ty.html">Start Training</a>
         <span class="separator">|</span>
         <a href="legal-overview.html">Our Policies</a>
         <span class="separator">|</span>
