--- a/client/pages/offer-decoded.html
+++ b/client/pages/offer-decoded.html
@@ -1014,7 +1014,7 @@ alert('Could not initialise PayPal. Please refresh and try again.');
       <p class="powered">POWERED BY</p>
       <p>&copy; 2026 Raising The Bar App Ltd. All rights reserved.</p>
       <div class="footer-links">
-        <a href="forms-decoded.html">Start Training</a>
+        <a href="../gains-plus.html">Start Training</a>
         <span class="separator">|</span>
         <a href="legal-overview.html">Our Policies</a>
         <span class="separator">|</span>
