Offer Page Tweaks

--- a/client/pages/offer-dav.html
+++ b/client/pages/offer-dav.html
@@ -365,6 +365,7 @@ placeholder.replaceWith(iframe);
       <li>Workouts structured the way Dav trains</li>
       <li>Meals built around your goal and routine</li>
       <li>See how you’re progressing and what to do next</li>
+      <li>Stay consistent with mindset & recovery tools</li>
     </ul>
   </div>
 
