--- a/client/pages/offer-kayp.html
+++ b/client/pages/offer-kayp.html
@@ -209,44 +209,24 @@ Other apps just track. <strong>We use what you track to adapt workouts & meals</
       <!-- LEFT: Subheadings with 50px margin between them -->
       <div class="wi2-left">
         <div class="wi2-item active ct-item" data-index="0">
-          <h4><span class="tick ct-tick">✔</span> Personalized Workout <br>Plan</h4>
+          <h4><span class="tick ct-tick">✔</span> Personalized workout <br>plan</h4>
         </div>
         <div class="wi2-item ct-item" data-index="1">
           <h4><span class="tick ct-tick">✔</span> Clear and easy to follow</h4>
         </div>
-        <div class="wi2-item ct-item" data-index="2">
-          <h4><span class="tick ct-tick">✔</span> The same structure KayP follows</h4>
-        </div>
-        <div class="wi2-item pt-item" data-index="3">
-          <h4><span class="tick pt-tick">✔</span> Visible Results in 4 Weeks</h4>
-        </div>
-        <!-- <div class="wi2-item pt-item" data-index="3">
-          <h4><span class="tick pt-tick">✔</span> AI Meal & Body Scanners</h4>
-        </div> -->
-        <div class="wi2-item pt-item" data-index="4">
+        <div class="wi2-item pt-item" data-index="2">
           <h4><span class="tick pt-tick">✔</span> Progress tracking & analysis</h4>
         </div>
-        <!-- <div class="wi2-item pt-item" data-index="5">
-          <h4><span class="tick pt-tick">✔</span> Friendly Coach Support</h4>
-        </div> -->
-        <!-- <div class="wi2-item pt-item" data-index="5">
-<h4><span class="tick pt-tick">✔</span> Online <br> 1-On-1 Coaching</h4>
-</div> -->
-        <!-- <div class="wi2-item pt-item" data-index="4">
-<h4><span class="tick pt-tick">✔</span> Flexible Logging</h4>
-</div>
-<div class="wi2-item ct-item" data-index="5">
-<h4><span class="tick ct-tick">✔</span> Daily Streaks</h4>
-</div>
-<div class="wi2-item pt-item" data-index="6">
-<h4><span class="tick pt-tick">✔</span> Your Fitness Story, Visualized</h4>
-</div>
-<div class="wi2-item pt-item" data-index="7">
-<h4><span class="tick pt-tick">✔</span> One Score That Tracks It All</h4>
-</div> -->
+        <div class="wi2-item pt-item" data-index="3">
+          <h4><span class="tick pt-tick">✔</span> Mindset & recovery tools</h4>
+        </div>
+        <div class="wi2-item ct-item" data-index="4">
+          <h4><span class="tick ct-tick">✔</span> The same structure Carl follows</h4>
+        </div>
+        <div class="wi2-item pt-item" data-index="5">
+          <h4><span class="tick pt-tick">✔</span> Visible results in 4 weeks</h4>
+        </div>
       </div>
-
-
 
       <!-- RIGHT: pinned container,
 so it doesn't appear above the 1st item or below the last item. -->
@@ -365,6 +345,7 @@ placeholder.replaceWith(iframe);
       <li>Workouts structured the way KayP trains</li>
       <li>Meals built around your goal and routine</li>
       <li>See how you’re progressing and what to do next</li>
+      <li>Stay consistent with mindset & recovery tools</li>
     </ul>
   </div>
 
@@ -673,7 +654,8 @@ placeholder.replaceWith(iframe);
           Money-Back Guarantee
         </a>.
         Need reassurance?
-        <button type="button" class="rating-summary__link reassurance__reviews-link" id="reassuranceReviewsLink" data-scroll-target="reviews">
+        <button type="button" class="rating-summary__link reassurance__reviews-link" id="reassuranceReviewsLink"
+          data-scroll-target="reviews">
           Read reviews
         </button>
       </p>
@@ -691,11 +673,12 @@ placeholder.replaceWith(iframe);
 
   </section>
 
-<p id="postPayNote" class="post-pay-note" style="display:none;text-align:center;margin-top:12px;">
-  ✅ <strong>After checkout, your plan unlocks immediately</strong> — you’ll land on your dashboard.<br><br>
-  You’re protected by our <strong>30-Day Money-Back Guarantee</strong>. If you don’t see results, you’ll receive a full refund.<br><br>
-  Includes personalised workouts, meals, and progress tracking.
-</p>
+  <p id="postPayNote" class="post-pay-note" style="display:none;text-align:center;margin-top:12px;">
+    ✅ <strong>After checkout, your plan unlocks immediately</strong> — you’ll land on your dashboard.<br><br>
+    You’re protected by our <strong>30-Day Money-Back Guarantee</strong>. If you don’t see results, you’ll receive a
+    full refund.<br><br>
+    Includes personalised workouts, meals, and progress tracking.
+  </p>
 
   <section id="loadingSection" class="loading-section" style="display: none;">
     <p id="loadingText">Loading...</p>
@@ -867,7 +850,7 @@ alert('Could not initialise PayPal. Please refresh and try again.');
   <div class="testimonial-section ">
     <h2>Real Results From Real People</h2>
     <p class="hero-text">
-       Progress from people whose plans were built the same way as yours.
+      Progress from people whose plans were built the same way as yours.
     </p>
 
     <div class="testimonial-container">
