--- a/client/pages/offer-nhial.html
+++ b/client/pages/offer-nhial.html
@@ -362,6 +362,7 @@ placeholder.replaceWith(iframe);
       <li>Workouts structured the way Nhial trains</li>
       <li>Meals built around your goal and routine</li>
       <li>See how you’re progressing and what to do next</li>
+      <li>Stay consistent with mindset & recovery tools</li>
     </ul>
   </div>
 
