Login Forms Button

--- a/client/pages/forms.html
+++ b/client/pages/forms.html
@@ -92,6 +92,9 @@ src="https://www.facebook.com/tr?id=2589073464764526&ev=PageView&noscript=1"
           </picture>
         </a>
       </div>
+      <a class="login-link" id="login-offer-link" href="log-in-offer.html">
+        Already completed the quiz? Log in
+      </a>
       <!-- <div class="dark-mode-button">
         <img id="darkModeToggle" class="" src="" alt="" height="0px">
       </div> -->
