--- a/client/pages/forms-decoded.html
+++ b/client/pages/forms-decoded.html
@@ -90,6 +90,9 @@
         </picture>
         </a>
       </div>
+      <a class="login-link" id="login-offer-link" href="log-in-offer-decoded.html">
+        Already completed the quiz? Log in
+      </a>
       <!-- <div class="dark-mode-button">
         <img id="darkModeToggle" class="" src="" alt="" height="0px">
       </div> -->
@@ -125,9 +128,11 @@
         </p>
         <br>
         <input type="checkbox" id="agreement-checkbox" checked>
-        By continuing, you agree to our <a href="tos.html" target="_blank">Terms of Service</a>,
-        <a href="privacy-policy.html" target="_blank">Privacy Policy</a>, and
-        <a href="cookie-policy.html" target="_blank">Cookie Policy</a>.
+By continuing, you agree to our 
+<a href="../pages/tos.html" target="_blank">Terms of Service</a>, 
+<a href="../pages/privacy-policy.html" target="_blank">Privacy Policy</a>, and 
+<a href="../pages/cookie-policy.html" target="_blank">Cookie Policy</a>.
+
       </label>
       <p id="warning-text" class="hidden">To continue, please accept our terms and policies.</p>
       <br>
