--- a/client/pages/forms-kayp.html
+++ b/client/pages/forms-kayp.html
@@ -88,6 +88,9 @@ src="https://www.facebook.com/tr?id=2589073464764526&ev=PageView&noscript=1"
           </picture>
         </a>
       </div>
+      <a class="login-link" id="login-offer-link" href="log-in-offer-kayp.html">
+        Already completed the quiz? Log in
+      </a>
       <!-- <div class="dark-mode-button">
         <img id="darkModeToggle" class="" src="" alt="" height="0px">
       </div> -->
@@ -123,9 +126,11 @@ src="https://www.facebook.com/tr?id=2589073464764526&ev=PageView&noscript=1"
         </p>
         <br>
         <input type="checkbox" id="agreement-checkbox" checked>
-        By continuing, you agree to our <a href="tos.html" target="_blank">Terms of Service</a>,
-        <a href="privacy-policy.html" target="_blank">Privacy Policy</a>, and
-        <a href="cookie-policy.html" target="_blank">Cookie Policy</a>.
+By continuing, you agree to our 
+<a href="../pages/tos.html" target="_blank">Terms of Service</a>, 
+<a href="../pages/privacy-policy.html" target="_blank">Privacy Policy</a>, and 
+<a href="../pages/cookie-policy.html" target="_blank">Cookie Policy</a>.
+
       </label>
       <p id="warning-text" class="hidden">To continue, please accept our terms and policies.</p>
       <br>
