--- a/client/pages/offer-kayp.html
+++ b/client/pages/offer-kayp.html
@@ -221,7 +221,7 @@ Other apps just track. <strong>We use what you track to adapt workouts & meals</
           <h4><span class="tick pt-tick">✔</span> Mindset & recovery tools</h4>
         </div>
         <div class="wi2-item ct-item" data-index="4">
-          <h4><span class="tick ct-tick">✔</span> The same structure Carl follows</h4>
+          <h4><span class="tick ct-tick">✔</span> The same structure KayP follows</h4>
         </div>
         <div class="wi2-item pt-item" data-index="5">
           <h4><span class="tick pt-tick">✔</span> Visible results in 4 weeks</h4>
