--- a/client/pages/forms.html
+++ b/client/pages/forms.html
@@ -130,9 +130,11 @@ src="https://www.facebook.com/tr?id=2589073464764526&ev=PageView&noscript=1"
         </p>
         <br>
         <input type="checkbox" id="agreement-checkbox" checked>
-        By continuing, you agree to our <a href="tos.html" target="_blank">Terms of Service</a>,
-        <a href="privacy-policy.html" target="_blank">Privacy Policy</a>, and
-        <a href="cookie-policy.html" target="_blank">Cookie Policy</a>.
+By continuing, you agree to our 
+<a href="../pages/tos.html" target="_blank">Terms of Service</a>, 
+<a href="../pages/privacy-policy.html" target="_blank">Privacy Policy</a>, and 
+<a href="../pages/cookie-policy.html" target="_blank">Cookie Policy</a>.
+
       </label>
       <p id="warning-text" class="hidden">To continue, please accept our terms and policies.</p>
       <br>
