--- a/client/ryan.html
+++ b/client/ryan.html
@@ -49,7 +49,7 @@
     !function (f, b, e, v, n, t, s) {
       if (f.fbq) return; n = f.fbq = function () {
         n.callMethod ?
-        n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+          n.callMethod.apply(n, arguments) : n.queue.push(arguments)
       };
       if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
       n.queue = []; t = b.createElement(e); t.async = !0;
@@ -90,6 +90,9 @@
         </picture>
         </a>
       </div>
+      <a class="login-link" id="login-offer-link" href="../pages/log-in-offer-ryan.html">
+        Already completed the quiz? Log in
+      </a>
       <!-- <div class="dark-mode-button">
         <img id="darkModeToggle" class="" src="" alt="" height="0px">
       </div> -->
@@ -125,9 +128,11 @@
         </p>
         <br>
         <input type="checkbox" id="agreement-checkbox" checked>
-        By continuing, you agree to our <a href="tos.html" target="_blank">Terms of Service</a>,
-        <a href="privacy-policy.html" target="_blank">Privacy Policy</a>, and
-        <a href="cookie-policy.html" target="_blank">Cookie Policy</a>.
+By continuing, you agree to our 
+<a href="../pages/tos.html" target="_blank">Terms of Service</a>, 
+<a href="../pages/privacy-policy.html" target="_blank">Privacy Policy</a>, and 
+<a href="../pages/cookie-policy.html" target="_blank">Cookie Policy</a>.
+
       </label>
       <p id="warning-text" class="hidden">To continue, please accept our terms and policies.</p>
       <br>
