--- a/client/pages/tos.html
+++ b/client/pages/tos.html
@@ -178,6 +178,18 @@
     <h2>17. Contact</h2>
     <p>Questions about these Terms? Email us at <span class="email">info@raisingthebarapp.com</span> or write to:
       Raising The Bar App Ltd., 71-75 Shelton Street, Covent Garden, London, WC2H 9JQ, United Kingdom.</p>
+
+    <h2>18. Privacy, Cookies, and Potential Sale of Data</h2>
+    <p>Your use of the Service is also governed by our <a href="privacy-policy.html">Privacy Policy</a>.</p>
+
+    <p><strong>Potential sale of data:</strong> We may, in the future, introduce business models that involve selling or
+      licensing certain user data to third parties. If this occurs, we will clearly disclose this in our Privacy Policy
+      and/or through a cookie or consent banner.</p>
+
+    <p><strong>Consent requirement:</strong> Where required by applicable law (including GDPR/UK GDPR), we will only
+      sell personal data if you provide valid opt-in consent through a clear consent mechanism. You may withdraw consent
+      at any time.</p>
+
   </main>
 
   <!-- ───────────── FOOTER ───────────── -->
