--- a/client/pages/dashboard-ddfitness.html
+++ b/client/pages/dashboard-ddfitness.html
@@ -229,7 +229,7 @@
       <p id="ntStatus" class="status"></p>
       <p id="ntStreak" class="streak"></p>
       <p class="nt-subtext"><span class="nt-subtext-emoji">🧠</span> Stay on track without tracking stress.</p>
-        <a href="nutrition-tracker-ddfitness.html" class="cta">Go to Nutrition</a>
+      <a href="nutrition-tracker-ddfitness.html" class="cta">Go to Nutrition</a>
     </article>
 
     <!-- My Mind -->
@@ -239,6 +239,24 @@
       <p class="status">Check in, reset, and keep your mindset strong.</p>
       <p class="streak">Small steps for big mental wins.</p>
       <a href="my-mind-ddfitness.html" class="cta">Go to My Mind</a>
+    </article>
+
+    <!-- Coaching -->
+    <article class="tracker-card" id="coachingCard">
+      <span class="emoji">💬</span>
+      <h2>1:1 Coaching</h2>
+
+      <p class="status">
+        Want me to coach you personally?
+      </p>
+
+      <p class="streak">
+        DM me “DRIVE”.
+      </p>
+
+      <a href="https://www.tiktok.com/@ddgainz" target="_blank" rel="noopener noreferrer" class="cta">
+        Apply For Coaching
+      </a>
     </article>
 
     <article class="tracker-card" id="mpCard" style="display:none;">
