Seb Coaching Update

--- a/client/pages/dashboard-seb.html
+++ b/client/pages/dashboard-seb.html
@@ -241,6 +241,24 @@
       <a href="my-mind-seb.html" class="cta">Go to My Mind</a>
     </article>
 
+        <!-- Coaching -->
+    <article class="tracker-card" id="coachingCard">
+      <span class="emoji">💬</span>
+      <h2>1:1 Coaching</h2>
+
+      <p class="status">
+        Want me to coach you personally?
+      </p>
+
+      <p class="streak">
+        DM me "COACH".
+      </p>
+
+      <a href="https://www.tiktok.com/@nav2fit" target="_blank" rel="noopener noreferrer" class="cta">
+        Apply For Coaching
+      </a>
+    </article>
+
     <article class="tracker-card" id="mpCard" style="display:none;">
       <span class="emoji">🚀</span>
       <h2>My Progress</h2>
