--- a/client/index.html
+++ b/client/index.html
@@ -38,7 +38,6 @@
 
                 <div class="hero-actions">
                     <a class="primary" href="#call-form">Enquire now</a>
-                    <a class="secondary" href="#how-it-works">How it works</a>
                 </div>
 
                 <div class="micro-proof">
@@ -58,7 +57,7 @@
                     </div>
                     <div>
                         <p class="stat">7 days</p>
-                        <p class="caption">typical launch time</p>
+                        <p class="caption">launch time</p>
                     </div>
                 </div>
             </div>
@@ -81,7 +80,7 @@
                 <ul class="quick-list">
                     <li>We build your app under your name</li>
                     <li>Your audience buys plans through it</li>
-                    <li>We handle everything behind the scenes</li>
+                    <li>We handle it all behind the scenes</li>
                 </ul>
             </div>
 
@@ -103,35 +102,20 @@
             </div>
         </section>
 
-        <section class="journey" id="how-it-works">
+        <section class="payout-proof" aria-label="Creator payouts proof">
             <div class="section-header">
-                <p class="eyebrow">Simple process</p>
-                <h2>What happens next</h2>
-                <p class="lede">After you enquire and get approved, the next step is a 10-min demo call.</p>
+                <p class="eyebrow">Payout proof</p>
+                <h2>One creator made $1,500+ in 6 weeks.</h2>
             </div>
 
-            <div class="steps">
-                <div class="step-card">
-                    <div class="step-number">1</div>
-                    <h3>10-min demo call</h3>
-                    <p>We show you how the app works, what your viewers would see, and how you get paid.</p>
-                </div>
-
-                <div class="step-card">
-                    <div class="step-number">2</div>
-                    <h3>We build your app</h3>
-                    <p>Logo, colours, and wording matched to your content style and preferences.</p>
-                </div>
-
-                <div class="step-card">
-                    <div class="step-number">3</div>
-                    <h3>You post like normal</h3>
-                    <p>The app turns your viewers into paying customers automatically.</p>
-                </div>
+            <div class="payout-proof-card">
+                <img src="../assets/creator-payouts.webp"
+                    alt="Stripe payouts screenshot showing $1,543.16 lifetime total volume" loading="lazy">
             </div>
         </section>
 
         <section class="creator-proof" id="testimonials" aria-labelledby="creator-proof-heading">
+
             <div class="section-header">
                 <p class="eyebrow">Creator reviews</p>
                 <h2 id="creator-proof-heading">What our partners say</h2>
@@ -193,7 +177,7 @@
 
         <section class="cta" id="call-form">
             <div class="cta-content">
-                <p class="eyebrow">Book a demo</p>
+                <p class="eyebrow">Enquire now</p>
                 <h2>Tell us about you.</h2>
                 <p class="lede">
                     Submit the form and we’ll reach out within 24 hours.
