--- a/client/index.html
+++ b/client/index.html
@@ -14,7 +14,7 @@
     <header class="site-header">
         <div class="logo-wrap">
             <a href="../pages/home.html" class="logo-link">
-                <img src="../assets/creator-program-logo.png" alt="Raising The Bar" class="logo" loading="lazy">
+                <img src="../assets/rtb-logo-white.png" alt="Raising The Bar" class="logo" loading="lazy">
             </a>
             <span class="tag">Creator Partnership</span>
         </div>
@@ -181,7 +181,7 @@
                 <h2>Tell us about you.</h2>
                 <p class="lede">
                     Submit the form and we’ll reach out within 24 hours.
-                    If you want to move faster, you can pick a time immediately after submitting.
+                    If you want to move faster, you can book a live demo immediately after submitting.
                 </p>
             </div>
 
