Landing Page Update 2

--- a/client/index.html
+++ b/client/index.html
@@ -102,63 +102,62 @@
             </div>
         </section>
 
-                    <section class="example-apps" aria-labelledby="example-apps-heading">
-                <div class="section-header">
-                    <p class="eyebrow">See real examples</p>
-                    <h2 id="example-apps-heading">Apps we’ve built for creators</h2>
+        <section class="example-apps" aria-labelledby="example-apps-heading">
+            <div class="section-header">
+                <p class="eyebrow">See real examples</p>
+                <h2 id="example-apps-heading">Apps we’ve built for creators</h2>
+            </div>
+
+            <div class="examples-carousel" aria-label="Example apps carousel">
+                <div class="examples-track" id="examplesTrack">
+                    <a href="https://raisingthebarapp.com/gains-plus.html" class="example-card" target="_blank"
+                        rel="noopener">
+                        <div class="example-top">
+                            <img src="../assets/example-gains-plus.webp" alt="Gains+ app preview" loading="lazy">
+                        </div>
+
+                        <div class="example-bottom">
+                            <p class="example-name">Gains+ App</p>
+                            <span class="example-cta">View app →</span>
+                        </div>
+                    </a>
+
+                    <a href="https://raisingthebarapp.com/ryan.html" class="example-card" target="_blank"
+                        rel="noopener">
+                        <div class="example-top">
+                            <img src="../assets/example-ryan.webp" alt="Ryan app preview" loading="lazy">
+                        </div>
+
+                        <div class="example-bottom">
+                            <p class="example-name">Ryan’s App</p>
+                            <span class="example-cta">View app →</span>
+                        </div>
+                    </a>
+
+                    <a href="https://raisingthebarapp.com/seb.html" class="example-card" target="_blank" rel="noopener">
+                        <div class="example-top">
+                            <img src="../assets/example-seb.webp" alt="Seb app preview" loading="lazy">
+                        </div>
+
+                        <div class="example-bottom">
+                            <p class="example-name">Seb’s App</p>
+                            <span class="example-cta">View app →</span>
+                        </div>
+                    </a>
                 </div>
 
-                <div class="examples-carousel" aria-label="Example apps carousel">
-                    <div class="examples-track" id="examplesTrack">
-                        <a href="https://raisingthebarapp.com/gains-plus.html" class="example-card" target="_blank"
-                            rel="noopener">
-                            <div class="example-top">
-                                <img src="../assets/example-gains-plus.webp" alt="Gains+ app preview" loading="lazy">
-                            </div>
-
-                            <div class="example-bottom">
-                                <p class="example-name">Gains+ App</p>
-                                <span class="example-cta">View app →</span>
-                            </div>
-                        </a>
-
-                        <a href="https://raisingthebarapp.com/ryan.html" class="example-card" target="_blank"
-                            rel="noopener">
-                            <div class="example-top">
-                                <img src="../assets/example-ryan.webp" alt="Ryan app preview" loading="lazy">
-                            </div>
-
-                            <div class="example-bottom">
-                                <p class="example-name">Ryan’s App</p>
-                                <span class="example-cta">View app →</span>
-                            </div>
-                        </a>
-
-                        <a href="https://raisingthebarapp.com/seb.html" class="example-card" target="_blank"
-                            rel="noopener">
-                            <div class="example-top">
-                                <img src="../assets/example-seb.webp" alt="Seb app preview" loading="lazy">
-                            </div>
-
-                            <div class="example-bottom">
-                                <p class="example-name">Seb’s App</p>
-                                <span class="example-cta">View app →</span>
-                            </div>
-                        </a>
-                    </div>
-
-                    <div class="examples-dots" aria-label="Examples pagination">
-                        <button class="dot is-active" type="button" aria-label="Example 1" data-index="0"></button>
-                        <button class="dot" type="button" aria-label="Example 2" data-index="1"></button>
-                        <button class="dot" type="button" aria-label="Example 3" data-index="2"></button>
-                    </div>
+                <div class="examples-dots" aria-label="Examples pagination">
+                    <button class="dot is-active" type="button" aria-label="Example 1" data-index="0"></button>
+                    <button class="dot" type="button" aria-label="Example 2" data-index="1"></button>
+                    <button class="dot" type="button" aria-label="Example 3" data-index="2"></button>
                 </div>
-            </section>
+            </div>
+        </section>
 
         <section class="payout-proof" aria-label="Creator payouts proof">
             <div class="section-header">
                 <p class="eyebrow">Payout proof</p>
-                <h2>One creator made $1,500+ in 6 weeks.</h2>
+                <h2>$1,500+ earned in 6 weeks.</h2>
             </div>
 
             <div class="payout-proof-card">
