Form / Offer Copy Update

--- a/client/carl.html
+++ b/client/carl.html
@@ -99,7 +99,7 @@
     </div>
 
     <div id="incentive-box">
-      <span class="incentive-text">Complete this quiz to build your personalised <br> 12-Week Plan</span>
+      <span class="incentive-text">Complete this quiz to build your personalised plan<br>using my exact training framework</span>
       <button id="incentive-close" aria-label="Close">&times;</button>
     </div>
 
@@ -128,10 +128,10 @@
         </p>
         <br>
         <input type="checkbox" id="agreement-checkbox" checked>
-By continuing, you agree to our 
-<a href="../pages/tos.html" target="_blank">Terms of Service</a>, 
-<a href="../pages/privacy-policy.html" target="_blank">Privacy Policy</a>, and 
-<a href="../pages/cookie-policy.html" target="_blank">Cookie Policy</a>.
+        By continuing, you agree to our
+        <a href="../pages/tos.html" target="_blank">Terms of Service</a>,
+        <a href="../pages/privacy-policy.html" target="_blank">Privacy Policy</a>, and
+        <a href="../pages/cookie-policy.html" target="_blank">Cookie Policy</a>.
 
       </label>
       <p id="warning-text" class="hidden">To continue, please accept our terms and policies.</p>
