--- a/client/pages/offer-danny.html
+++ b/client/pages/offer-danny.html
@@ -201,8 +201,8 @@ Other apps just track. <strong>We use what you track to adapt workouts & meals</
 
 
   <div class="whats-included-container">
-    <h2 class="wi2-heading">Built With Danny's Structure</h2>
-    <p class="wi2-description">Your plan is personalized to you — built using Danny's structure to keep you consistent.
+    <h2 class="wi2-heading">Built With My Structure</h2>
+    <p class="wi2-description">Your plan is personalized to you — built using my structure to keep you consistent.
     </p>
 
     <div class="wi2-content">
@@ -221,7 +221,7 @@ Other apps just track. <strong>We use what you track to adapt workouts & meals</
           <h4><span class="tick pt-tick">✔</span> Mindset & recovery tools</h4>
         </div>
         <div class="wi2-item ct-item" data-index="4">
-          <h4><span class="tick ct-tick">✔</span> The same structure Danny follows</h4>
+          <h4><span class="tick ct-tick">✔</span> The same structure I follow</h4>
         </div>
         <div class="wi2-item pt-item" data-index="5">
           <h4><span class="tick pt-tick">✔</span> Visible results in 4 weeks</h4>
@@ -258,7 +258,7 @@ so it doesn't appear above the 1st item or below the last item. -->
         <h3 class="asp-headline">
           <span class="asp-number">10,000+</span>
           <br>
-          kick-started their journey using Danny's structure
+          kick-started their journey using my structure
         </h3>
 
       </div>
@@ -339,10 +339,10 @@ placeholder.replaceWith(iframe);
 </section> -->
 
     <h2 class="complete-workout-heading">
-      Your Personalized Plan — Built With Danny's Structure
+      Your Personalized Plan — Built With My Structure
     </h2>
     <ul class="workout-benefits">
-      <li>Workouts structured the way Danny trains</li>
+      <li>Workouts structured the way I train</li>
       <li>Meals built around your goal and routine</li>
       <li>See how you’re progressing and what to do next</li>
       <li>Stay consistent with mindset & recovery tools</li>
@@ -351,7 +351,7 @@ placeholder.replaceWith(iframe);
 
   <!-- Testimonials / Social Proof -->
   <div class="review-section">
-    <h3>Results From Danny's Structure</h3>
+    <h3>Results From My Structure</h3>
 
     <div class="before-after-images">
       <div class="before-image">
