--- a/client/kayp.html
+++ b/client/kayp.html
@@ -99,7 +99,7 @@
     </div>
 
     <div id="incentive-box">
-      <span class="incentive-text">Complete this quiz to build your personalised <br> 12-Week Plan</span>
+      <span class="incentive-text">Complete this quiz to build your personalised plan<br>using my exact training framework</span>
       <button id="incentive-close" aria-label="Close">&times;</button>
     </div>
 
